[gd_scene load_steps=4 format=3 uid="uid://dhehd3pm5f7uu"]

[ext_resource type="Script" uid="uid://bctbcycevqndc" path="res://Nilayah's Working Folder/pickup_item.gd" id="1_rs3ol"]
[ext_resource type="Texture2D" uid="uid://g3mqcb4xavu5" path="res://assets/bins and recycle items/recycle_items.png" id="2_aigd6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ltp3i"]
radius = 6.66667
height = 33.3333

[node name="pickup_item" type="Area2D"]
scale = Vector2(0.3, 0.3)
script = ExtResource("1_rs3ol")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -30)
texture = ExtResource("2_aigd6")
region_enabled = true
region_rect = Rect2(1, -1, 19, 65)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -20)
shape = SubResource("CapsuleShape2D_ltp3i")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
